--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "@types/styled-components": "^4.1.19",
     "react": "^16.10.1",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^4.4.0",
     "typescript": "3.6.3"
   },
   "scripts": {
